feat: modified app module for user module changes(Work in progress client side)

--- a/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
@@ -20,6 +20,7 @@
                     <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']"><i class="icon-speedometer"></i><span> Dashboard</span></a>
                     <a class="nav-link" routerLinkActive="active" [routerLink]="['/cases/create']"><i class="icon-plus"></i><span>  New Case</span> </a>
                     <a class="nav-link" routerLinkActive="active" [routerLink]="['/cases/list']"><i class="icon-notebook"></i><span>  All Cases </span></a>
+                    <a class="nav-link" routerLinkActive="active" [routerLink]="['/user/create']"><i class="icon-user"></i><span>  User Management </span></a>
                 </li>
             </ul>
         </nav>
