feat: added few more methods to charts service and charts to dashboard

--- a/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
@@ -2,3 +2,5 @@
 <total_open_cases></total_open_cases>
 <total_closed_cases></total_closed_cases>
 <case_resolution_rate></case_resolution_rate>
+<total_counseling_hours></total_counseling_hours>
+<total_sessions></total_sessions>
