feat: added new charts for sought help and signed registration form

--- a/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
@@ -4,3 +4,5 @@
 <case_resolution_rate></case_resolution_rate>
 <total_counseling_hours></total_counseling_hours>
 <total_sessions></total_sessions>
+<percentage_cases_sought_help></percentage_cases_sought_help>
+<percentage_cases_signed></percentage_cases_signed>
