feat: UI code for user management

--- a/Web/WhitePage.MyWeb.UI/src/scss/_custom.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/_custom.scss
@@ -168,3 +168,8 @@ input {
     background-color: $brand-primary !important;
 }
 
+.custom-control-input{
+    height: 16px;
+    width: 16px;
+    vertical-align: middle;
+}
