--- a/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
@@ -1,16 +1,14 @@
-﻿<!--<form [formGroup]="casePrimaryForm">-->
-    <form>
-    <div class="row">
-        <div class="col-md-4 d-flex flex-column">
+﻿<form [formGroup]="addUserForm" *ngIf="roles" novalidate>
+    <div class="row justify-content-center">
+        <div class="col-md-4 d-flex flex-column" style="min-width: 450px">
             <div class="card flex-fill">
                 <div class="card-header">
                     New user details
                 </div>
-                <!--<div class="card-block" formGroupName="primaryInfo">-->
-                <div class="card-block">
+                <div class="card-block" formGroupName="userDetails">
                     <div class="form-group">
                         <label for="firstname">First Name *</label>
-                        <input placeholder="First Name" id="firstname" class="form-control" />
+                        <input placeholder="First Name" id="firstname" class="form-control" formControlName="firstname"/>
                         <!--<input placeholder="First Name" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName']" [(ngModel)]="caseBook.Case.ClientFirstName" class="form-control" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].touched" class="mat-text-warn">First Name is required.</small>
@@ -19,7 +17,7 @@
 
                     <div class="form-group">
                         <label for="lastname">Last Name *</label>
-                        <input placeholder="Last Name" id="lastname" class="form-control" />
+                        <input placeholder="Last Name" id="lastname" class="form-control" formControlName="lastname"/>
                         <!--<input placeholder="First Name" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName']" [(ngModel)]="caseBook.Case.ClientFirstName" class="form-control" />
                         <div>
                             <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].touched" class="mat-text-warn">First Name is required.</small>
@@ -27,13 +25,42 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="userTypeId">User Type *</label>
-                        <ng-select [options]="['Peacemaker','Counselor']"
-                                   placeholder="Select user type"
-                                   [(ngModel)]="userTypeId"
+                        <label class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" formControlName="isNewLogin"  name="newLogin" [(ngModel)]="isNewLogin">
+                            <span class="custom-control-indicator"></span>
+                            <span class="custom-control-description">Create new user login</span>
+                        </label>
+                    </div>
+
+                    <div class="form-group" *ngIf="isNewLogin">
+                        <label for="email">Email *</label>
+                        <input placeholder="Email" id="email" class="form-control" formControlName="email"/>
+                    </div>
+
+                    <div class="form-group">
+                        <div for="email">User type *</div>
+                        <div style="display: flex; justify-content: space-around">
+                            <label class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" formControlName="peacemaker">
+                                <span class="custom-control-indicator"></span>
+                                <span class="custom-control-description">Peacemaker</span>
+                            </label>
+
+                            <label class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" name="isCounselor" [(ngModel)]="isCounselor" formControlName="counselor">
+                                <span class="custom-control-indicator"></span>
+                                <span class="custom-control-description">Counselor</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="roleId">Role *</label>
+                        <ng-select [options]="roles"
+                                   placeholder="Select role"
                                    [allowClear]="true"
-                                   name="userType"
-                                   id="userTypeId">
+                                   name="role"
+                                   id="roleId"
+                                   formControlName="role">
                         </ng-select>
                         <!--<ng-select [options]="peaceMakerOptionsList"
                         placeholder="Select Peace Maker"
@@ -47,25 +74,37 @@
                         </div>-->
                     </div>
 
-                    <div class="form-group">
-                        <label for="roleId">Role *</label>
-                        <ng-select [options]="['Administrator','Manager', 'Center user']"
-                                   placeholder="Select role"
-                                   [(ngModel)]="roleId"
+                    <div class="form-group" *ngIf="isCounselor">
+                        <label class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" formControlName="isGlobal" [(ngModel)]="isGlobal" name="isGlobal">
+                            <span class="custom-control-indicator"></span>
+                            <span class="custom-control-description">Add user for all centers</span>
+                        </label>
+
+                    </div>
+                    <div class="form-group" *ngIf="!isGlobal">
+                        <label for="centerId">Center</label>
+                        <ng-select [options]="centers"
+                                   placeholder="Select center"
                                    [allowClear]="true"
-                                   name="role"
-                                   id="roleId">
+                                   name="center"
+                                   id="centerId"
+                                   formControlName="center">
                         </ng-select>
                         <!--<ng-select [options]="peaceMakerOptionsList"
-                        placeholder="Select Peace Maker"
-                        [(ngModel)]="caseBook.Case.PeaceMakerId"
-                        formControlName="PeaceMakerId"
-                        [allowClear]="true"
-                        id="roleId">
-                         </ng-select>-->
+        placeholder="Select Peace Maker"
+        [(ngModel)]="caseBook.Case.PeaceMakerId"
+        formControlName="PeaceMakerId"
+        [allowClear]="true"
+        id="roleId">
+         </ng-select>-->
                         <!--<div>
-                            <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].touched" class="mat-text-warn">Peace Maker is required.</small>
-                        </div>-->
+            <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].touched" class="mat-text-warn">Peace Maker is required.</small>
+        </div>-->
+                    </div>
+
+                    <div class="form-group" style="text-align: center">
+                        <button class="btn btn-primary" [disabled]="!addUserForm.valid" (click)="addNewUser()">Add user</button>
                     </div>
 
                 </div>
