fix: add user login client side code fixes

--- a/Web/WhitePage.MyWeb.UI/src/app/user/user.create.scss
+++ b/Web/WhitePage.MyWeb.UI/src/app/user/user.create.scss
@@ -1,2 +1,6 @@
-﻿body {
+﻿.case-detail-container {
+    .nav-tabs {
+        display: flex !important;
+        justify-content: center !important;
+    }
 }
