--- a/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/user/user.create.html
@@ -1,114 +1,35 @@
-﻿<form [formGroup]="addUserForm" *ngIf="roles" novalidate>
-    <div class="row justify-content-center">
-        <div class="col-md-4 d-flex flex-column" style="min-width: 450px">
-            <div class="card flex-fill">
-                <div class="card-header">
-                    New user details
-                </div>
-                <div class="card-block" formGroupName="userDetails">
-                    <div class="form-group">
-                        <label for="firstname">First Name *</label>
-                        <input placeholder="First Name" id="firstname" class="form-control" formControlName="firstname"/>
-                        <!--<input placeholder="First Name" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName']" [(ngModel)]="caseBook.Case.ClientFirstName" class="form-control" />
-                        <div>
-                            <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].touched" class="mat-text-warn">First Name is required.</small>
-                        </div>-->
-                    </div>
-
-                    <div class="form-group">
-                        <label for="lastname">Last Name *</label>
-                        <input placeholder="Last Name" id="lastname" class="form-control" formControlName="lastname"/>
-                        <!--<input placeholder="First Name" [formControl]="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName']" [(ngModel)]="caseBook.Case.ClientFirstName" class="form-control" />
-                        <div>
-                            <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['ClientFirstName'].touched" class="mat-text-warn">First Name is required.</small>
-                        </div>-->
-                    </div>
-
-                    <div class="form-group">
-                        <label class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" formControlName="isNewLogin"  name="newLogin" [(ngModel)]="isNewLogin">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Create new user login</span>
-                        </label>
-                    </div>
-
-                    <div class="form-group" *ngIf="isNewLogin">
-                        <label for="email">Email *</label>
-                        <input placeholder="Email" id="email" class="form-control" formControlName="email"/>
-                    </div>
-
-                    <div class="form-group">
-                        <div for="email">User type *</div>
-                        <div style="display: flex; justify-content: space-around">
-                            <label class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" formControlName="peacemaker">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Peacemaker</span>
-                            </label>
-
-                            <label class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" name="isCounselor" [(ngModel)]="isCounselor" formControlName="counselor">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Counselor</span>
-                            </label>
+﻿<div class="container-fluid case-detail-container justify-tabs">
+    <tabset>
+        <tab heading="Add PeaceMaker" class="active" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-4 d-flex flex-column" style="min-width: 450px">
+                    <div class="card flex-fill">
+                        <div class="card-header">
+                            User details
+                        </div>
+                        <div class="card-block primary-info-view">
+                            <create-peacemaker></create-peacemaker>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="roleId">Role *</label>
-                        <ng-select [options]="roles"
-                                   placeholder="Select role"
-                                   [allowClear]="true"
-                                   name="role"
-                                   id="roleId"
-                                   formControlName="role">
-                        </ng-select>
-                        <!--<ng-select [options]="peaceMakerOptionsList"
-                        placeholder="Select Peace Maker"
-                        [(ngModel)]="caseBook.Case.PeaceMakerId"
-                        formControlName="PeaceMakerId"
-                        [allowClear]="true"
-                        id="roleId">
-                         </ng-select>-->
-                        <!--<div>
-                            <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].touched" class="mat-text-warn">Peace Maker is required.</small>
-                        </div>-->
+                </div>
+                
+            </div>
+            <hr />
+        </tab>
+        <tab heading="Add Counselor" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-4 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-header">
+                            User details
+                        </div>
+                        <div class="card-block primary-info-view">
+                            <create-counselor></create-counselor>
+                        </div>
                     </div>
-
-                    <div class="form-group" *ngIf="isCounselor">
-                        <label class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" formControlName="isGlobal" [(ngModel)]="isGlobal" name="isGlobal">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Add user for all centers</span>
-                        </label>
-
-                    </div>
-                    <div class="form-group" *ngIf="!isGlobal">
-                        <label for="centerId">Center</label>
-                        <ng-select [options]="centers"
-                                   placeholder="Select center"
-                                   [allowClear]="true"
-                                   name="center"
-                                   id="centerId"
-                                   formControlName="center">
-                        </ng-select>
-                        <!--<ng-select [options]="peaceMakerOptionsList"
-        placeholder="Select Peace Maker"
-        [(ngModel)]="caseBook.Case.PeaceMakerId"
-        formControlName="PeaceMakerId"
-        [allowClear]="true"
-        id="roleId">
-         </ng-select>-->
-                        <!--<div>
-            <small *ngIf="casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].hasError('required') && casePrimaryForm.controls['primaryInfo'].controls['PeaceMakerId'].touched" class="mat-text-warn">Peace Maker is required.</small>
-        </div>-->
-                    </div>
-
-                    <div class="form-group" style="text-align: center">
-                        <button class="btn btn-primary" [disabled]="!addUserForm.valid" (click)="addNewUser()">Add user</button>
-                    </div>
-
                 </div>
             </div>
-        </div>
-    </div>
-</form>
+        </tab>
+    </tabset>
+</div>
+
