--- a/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/layouts/full-layout.component.html
@@ -10,6 +10,7 @@
             
         </li>
     </ul>
+    <span style="font-size: 2em; color: whitesmoke; margin-left: auto; padding-top: 5px" class="hidden-md-down">Peace Tracker</span>
     <i class="fa fa-2x fa-power-off sign-out-icon" (click)="onSignout()" tooltip="Sign out" placement="bottom"></i>
 </header>
 <div class="app-body d-flex">
