--- a/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,95 @@
-<total_new_cases></total_new_cases>
-<total_open_cases></total_open_cases>
-<total_closed_cases></total_closed_cases>
-<case_resolution_rate></case_resolution_rate>
-<total_counseling_hours></total_counseling_hours>
-<total_sessions></total_sessions>
-<percentage_cases_sought_help></percentage_cases_sought_help>
-<percentage_cases_signed></percentage_cases_signed>
+<div class="case-detail-container justify-tabs">
+    <tabset>
+        <tab heading="New cases" class="active" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card flex-fill">
+                        <div class="card-block primary-info-view">
+                            <total_new_cases></total_new_cases>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <hr />
+        </tab>
+        <tab heading="Closed cases" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <total_closed_cases></total_closed_cases>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+        <tab heading="Open cases" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <total_open_cases></total_open_cases>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+        <tab heading="Resolution rates" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <case_resolution_rate></case_resolution_rate>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+        <tab heading="Counselling hours" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <total_counseling_hours></total_counseling_hours>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+        <tab heading="Sessions" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <total_sessions></total_sessions>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+        <tab heading="Sought help" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <percentage_cases_sought_help></percentage_cases_sought_help>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+        <tab heading="Singed cases" style="width:100%">
+            <div class="row justify-content-center">
+                <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
+                    <div class="card">
+                        <div class="card-block primary-info-view">
+                            <percentage_cases_signed></percentage_cases_signed>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </tab>
+    </tabset>
+</div>
+
