fix: move case errors fixed

--- a/Web/WhitePage.MyWeb.UI/src/scss/core/_ng2-multi-select.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/core/_ng2-multi-select.scss
@@ -96,3 +96,7 @@ ng-select {
         background-color: transparent !important;
     }
 }
+
+ng-select > div > div.single > div.value{
+    color: whitesmoke;
+}
