fix: corrected spelling mistake of a tab name in dashboard

--- a/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/dashboard/dashboard.component.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </tab>
-        <tab heading="Singed cases" style="width:100%">
+        <tab heading="Signed cases" style="width:100%">
             <div class="row justify-content-center">
                 <div class="col-md-12 d-flex flex-column" style="min-width: 450px">
                     <div class="card">
