feat: added spinner to the application

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
@@ -1,3 +1,4 @@
+<my-spinner [isRunning]="!isDataLoaded"></my-spinner>
 <form [formGroup]="casePrimaryForm" *ngIf="isDataLoaded">
 
     <div class="row">
