fix: Mi data can be seen now in view case

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.html
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>M.I.  :</label>
-                                    <span>{{ primaryForm.MI }}</span>
+                                    <span>{{ primaryForm.Mi }}</span>
                                 </div>
                                 <div class="form-group">
                                     <label>Father / Husband Name  :</label>
