--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1049,7 +1049,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="btn btn-primary" (click)="onUpdateAbuse()">Update</button>
+                                    <button class="btn btn-primary" [disabled]="!caseAbuseForm.valid" (click)="onUpdateAbuse()">Update</button>
                                 </div>
                             </div>
                         </div>
