--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
@@ -18,7 +18,7 @@
                     [maxSize]="maxSize"
                     [boundaryLinks]="true"
                     [rotate]="false"
-                    (pageChanged)="onChangeTable(config, $event)"
+                    (pageChanged)="changeData(config, $event)"
                     (numPages)="numPages = $event">
         </pagination>
     </div>
