feat: search filter working all well(client side)

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
@@ -1,7 +1,7 @@
 <my-spinner [isRunning]="enableSpinner"></my-spinner>
 <div class="d-flex flex-column"> 
     <ng-table [config]="config"
-              (tableChanged)="onChangeTable(config)"
+              (tableChanged)="getFilteredCases(config)"
               (moveClicked)="onMoveClick($event)"
               (cellClicked)="onCellClick($event)"
               (editClicked)="onEditClick($event)"
