--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.list.html
@@ -23,6 +23,36 @@
         </pagination>
     </div>
 </div>
+<div class="modal fade" bsModal #deleteModal="bs-modal" [config]="{backdrop: 'static'}"
+     tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-delete-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Delete Case</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="hideDeleteModal()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-delete-body">
+                    <div class="row">
+                        <div class="col-md-12 d-flex flex-column">
+                            <div class="card flex-fill">
+                                <div class="card-header">
+                                    Are you sure you want to delete the Case {{this.caseNumber}} ?
+                                </div>
+                                <div class="card-block">
+                                <div class="form-group text-center">
+                                        <button class="btn btn-primary"  (click)="softDeleteCase(this.selectedCaseId)">Delete Case</button>
+                                    <button class="btn btn-primary" (click)="hideDeleteModal()">Cancel</button>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div bsModal #moveModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <!--<div class="modal-dialog modal-sm">
         <div class="modal-content">
